# Win32Checker

./: CMakeLists.txt  README.md  extract_win32_api.py  output.txt  scrape_win32_api.py  win32_cheatsheet.md  win32_functions_list.txt  win32_functions_list_backup.txt  win32checker.py
src/: checker.cpp  checker.h  exporters.cpp  exporters.h  main.cpp  win32_api_index.h
